src/tests/fixtures/typename/PropertyTypenameDoesNotMatchDeclaredName.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType User */
export class UserModel {
  __typename = "UserModel" as const;
  /** @gqlField */
  name: string = "Alice";
}

-----------------
OUTPUT
-----------------
-- Error Report --
src/tests/fixtures/typename/PropertyTypenameDoesNotMatchDeclaredName.ts:3:16 - error: Expected `__typename` property initializer to be `"User"`, found `"UserModel"`. This is needed to ensure Grats can determine the type of this object during GraphQL execution.

3   __typename = "UserModel" as const;
                 ~~~~~~~~~~~


-- Code Action: "Create Grats-compatible `__typename` property" (fix-typename-property) --
- Original
+ Fixed

@@ -2,3 +2,3 @@
  export class UserModel {
-   __typename = "UserModel" as const;
+   __typename = "User" as const;
    /** @gqlField */